[package]
name = "catts-query-proxy"
version = "0.0.3"
edition = "2021"
description = "Proxy C–ATTS recipe queries"
license = "MIT"
repository = "https://github.com/c-atts/catts-query-proxy"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-timer = "3.0.3"
http = "1.1.0"
jsonpath-rust = "0.7.0"
lazy_static = "1.4.0"
regex = "1.10.6"
serde = "1.0.208"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.114"
url = "2.5.0"
worker = "0.0.18"

[profile.release]
opt-level = "s"   # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
